my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ETREC_layout/ETREC_layout.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC_layout.dml:8:1: error ETREC: recursive type definition of layout
